// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`missing directory 1`] = `
"  
   new-app 0.2.2
  
   Destination directory is required.
  
   Usage:
   npx new-app <project> <directory>
  
   For help resolving this problem please visit:
   https://github.com/MattStypa/new-app/issues
  
"
`;

exports[`missing project 1`] = `
"  
   new-app 0.2.2
  
   Project name is required.
  
   Usage:
   npx new-app <project> <directory>
  
   For help resolving this problem please visit:
   https://github.com/MattStypa/new-app/issues
  
"
`;
